src/test/ui/hrtb/hrtb-higher-ranker-supertraits.stderr
error[E0277]: the trait bound `for<'tcx> F: Foo<'tcx>` is not satisfied
  --> $DIR/hrtb-higher-ranker-supertraits.rs:18:26
   |
LL |     want_foo_for_any_tcx(f);
   |                          ^ the trait `for<'tcx> Foo<'tcx>` is not implemented for `F`
...
LL | fn want_foo_for_any_tcx<F>(f: &F)
   |    --------------------
LL |     where F : for<'tcx> Foo<'tcx>
   |               ------------------- required by this bound in `want_foo_for_any_tcx`
   |
   = help: consider adding a `where for<'tcx> F: Foo<'tcx>` bound

error[E0277]: the trait bound `for<'ccx> B: Bar<'ccx>` is not satisfied
  --> $DIR/hrtb-higher-ranker-supertraits.rs:35:26
   |
LL |     want_bar_for_any_ccx(b);
   |                          ^ the trait `for<'ccx> Bar<'ccx>` is not implemented for `B`
...
LL | fn want_bar_for_any_ccx<B>(b: &B)
   |    --------------------
LL |     where B : for<'ccx> Bar<'ccx>
   |               ------------------- required by this bound in `want_bar_for_any_ccx`
   |
   = help: consider adding a `where for<'ccx> B: Bar<'ccx>` bound

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
